# wfs-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
src/fs/: mod.rs  util.rs
