[package]
name = "wfs-rs"
version = "0.1.0"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2021"
license = "MIT"
description = "FUSE filesystem for displaying Half-Life's WAD-s."
repository = "https://github.com/r4v3n6101/wfs-rs/"
keywords = ["goldsrc", "gamedev", "parsing", "fuse", "filesystem"]
categories = ["parsing", "game-development"]

[dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
goldsrc-rs = "0.14"
fuser = "0.14"
libc = "0.2.159"
image = { version = "0.25", default-features = false, features = [ "tga" ] }
clap = { version = "4.5.20", features = ["derive"] }
